--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,10 +35,11 @@ p {
 
 /* Navbar styling lines 38 - 60 */
 
-nav { 
-  position: absolute;
+nav {
+  position: relative;
   top: 0;
   width: 100%;
+  height: 3.5vmax;
   vertical-align: middle;
   color: white;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+20,2989d8+50,1e5799+80&0+0,0.8+15,1+19,1+81,0.8+85,0+100;Blue+Two+Sided+Transparent */
@@ -48,14 +49,43 @@ nav {
 }
 
 nav p {
+  position: absolute;
+  top: 50%;
+  margin-top: -.8vmax;
+}
+/*
+nav p {
   display: inline-block; 
   margin-left: 12.5%;
   margin-right: 12.5%;
+  border: 1px solid purple;
+  width: auto;
 }
+*/
 
 .navbar {
-  float: right;
-  text-align: right; 
+  position: relative;
+  width: 75%;
+  margin: auto;
+}
+
+.navbar-left {
+  left: 0;
+  text-align: left;
+ 
+}
+
+.navbar-center {
+  text-align: center;
+  width: 25vmin;
+  left: 50%;
+  margin-left: -125px;
+  color: lime;
+}
+
+.navbar-right {
+  right: 0;
+  text-align: right;
 }
 
 /* Background template styling and main header lines 66 - 117 */
@@ -68,7 +98,7 @@ nav p {
   left: 0;
   right: 0;*/
   margin-left: -225px; /*-215px*/
-  margin-top: 150px;
+  margin-top: 20px;
   width: 400px;
   height: 180px;
   box-shadow: 26px 26px 8px #595959;
@@ -234,7 +264,7 @@ a:active {
   margin: auto;*/
   left: 50%;
   margin-left: -325px;
-  margin-top: 150px;
+  margin-top: 20px;
   width: 600px;
   height: 180px;
   box-shadow: 26px 26px 8px #595959;
@@ -273,6 +303,7 @@ ol input {
 }
 
 #submit-btn {
+  font-size: 18px;
   z-index: 1;
   margin-top: 12px;
   height: 50px;
@@ -294,6 +325,34 @@ ol input {
   box-shadow: none;
 }
 
+#options-btn p {
+margin-top: 16px;
+}
+
+#options-btn {
+  font-family: Arial;
+  z-index: 2;
+  margin-left: 90px;
+  height: 50px;
+  width: 220px;
+  color: white;
+  border-radius: 8px;
+  background-color: #8c8c8c;
+  border: 1px solid white;
+  box-shadow: inset -4px -4px 26px 6px #4d4d4d;
+  cursor: pointer; 
+}
+
+#options-btn:hover {
+  background-color: rgba(41,137,216,1);
+  box-shadow: inset -4px -4px 26px 4px #1c5f97;
+}
+
+#options-btn:active {
+  box-shadow: none;
+}
+
+
 /* POLL-VAULT STYLING */
 
 #vault-header {
@@ -304,7 +363,7 @@ ol input {
   left: 0;
   right: 0;*/
   margin-left: -225px; /*-215px*/
-  margin-top: 70px;
+  margin-top: 10px;
   width: 400px;
   height: 180px;
   box-shadow: 26px 26px 8px #595959;
