--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,6 +388,18 @@ margin-top: 16px;
   width: 400px;
   height: 180px;
   box-shadow: 26px 26px 8px #595959;
+  cursor: pointer;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+}
+
+#vault-header:active {
+  box-shadow: 16px 16px 6px #595959;
+  transform: translate(6px, 6px);
 }
 
 #poll-vault {
@@ -403,7 +415,8 @@ h2 {
 }
 
 .left article {
-  margin-left: 30px;
+  /*margin-left: 30px;*/
+  text-align: center;
 }
 
 .right article {
@@ -514,10 +527,22 @@ ul li a:focus {
 }
  
 #myChart {
- 
+  margin-top: 10px;
   z-index: 2;
-  border: 1px solid red;
+
 }
+
+#centerSp {
+  left: 40%;
+}
+
+#voterBtn {
+  width: 100px;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+}
+
 
 /*
 #submit {
